[package]
name = "pcap_exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = { version = "4.5.59", features = ["derive"] }
etherparse = "0.19.0"
pcap = "2.4.0"
prometheus = "0.14.0"
tokio = { version = "1.49.0", features = ["full", "rt"] }
tower-http = { version = "0.6.8", features = ["fs"] }
